# Importa-planilha-postgresql

./: .env  .env.example  .gitignore  README.md  README_dependencias.md  carrega_metadados.py  conexao.py  executa_arquivo_sql.py  exporta_backup_bd.py  gera_create_inserts.py  gerar_raster.py  importa_raster.py  importa_raster_separado.py  junta_planilhas.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  transpor_planilha.py  transpor_planilha_RH_dados_superficiais.py
Juntar_planilhas - GT_RH/: junta_planilhas.py  transpor_planilha_RH_dados_subteraneo.py
docs/: INSTALACAO_SEM_POETRY.md  README.md
examples/: config_exemplo.env  exemplo_uso.md
src/: carrega_metadados.py  conexao.py  executa_arquivo_sql.py  exporta_backup_bd.py  gera_create_inserts.py  main.py  main_importacao.py  tipodados.txt
src/sql_generator/: __init__.py  cli.py  column_normalizer.py  constants.py  create_table_generator.py  encoding.py  enums.py  insert_generator.py  models.py  orchestrator.py  prompts.py  sampling.py  spreadsheet_reader.py  type_inferencer.py  value_classifier.py  value_patterns.py  value_utils.py
tests/: conftest.py  test_column_normalizer.py  test_legacy_compat.py  test_spreadsheet_reader.py  test_sql_generators.py  test_type_inferencer.py
tools/: junta_guias_planilha.py  junta_planilhas.py
