[project]
name = "importa-planilha-postgresql"
version = "0.1.0"
description = "Projeto para importar planilhas para PostgreSQL"
authors = [
    {name = "Felipe"}
]
readme = "README.md"
requires-python = "^3.8"
license = {text = "MIT"}
keywords = ["postgresql", "excel", "planilhas", "importacao", "dados"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=0.19.0",
    "unidecode>=1.3.0",
    "chardet>=4.0.0",
    "openpyxl>=3.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "geopandas>=0.12.0"
]

[tool.poetry]
name = "importa-planilha-postgresql"
version = "0.1.0"
description = "Projeto para importar planilhas para PostgreSQL"
authors = ["Felipe"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.5.0"
numpy = ">=1.21.0"
psycopg2-binary = ">=2.9.0"
python-dotenv = ">=0.19.0"
unidecode = ">=1.3.0"
chardet = ">=4.0.0"
openpyxl = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
geopandas = ">=0.12.0"

[tool.poetry.scripts]
importa-planilha = "main:main"
